Change ProductSummary object model
