# customers/src/main/java/com/jorge/customers/model/CustomerType.java
@@ -1,6 +1,0 @@
-package com.jorge.customers.model;
-
-public enum CustomerType {
-    PERSONAL,
-    BUSINESS
-}
